components/apps/monitoring/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: grafana.${CLUSTER_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: grafana-service
            port: 
              number: 3000
        pathType: Prefix
        path: "/"
  tls:
  - hosts:
    - grafana.${CLUSTER_DOMAIN}
    secretName: grafana-certificate-tls
